--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://coder0999.github.io/basic",
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.0",
+    "dotenv": "^17.2.3",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
