--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-VITE_SUPABASE_URL="https://jqtwgpureszvfgwdllgo.supabase.co"
-VITE_SUPABASE_ANON_KEY="sb_publishable_KAVFnuTneYsqZrce7n10Ag_1q0fSV1U"
 VITE_FIREBASE_API_KEY="AIzaSyBvROuv4CkJyfUby87owjFAmYvpyf8UU_c"
 VITE_FIREBASE_AUTH_DOMAIN="test-3054c.firebaseapp.com"
 VITE_FIREBASE_PROJECT_ID="test-3054c"
@@ -7,3 +5,5 @@ VITE_FIREBASE_STORAGE_BUCKET="test-3054c.firebasestorage.app"
 VITE_FIREBASE_MESSAGING_SENDER_ID="536496457232"
 VITE_FIREBASE_APP_ID="1:536496457232:web:ad63fed147ce0f53f92c95"
 VITE_FIREBASE_MEASUREMENT_ID="G-ZHT05S70E5"
+VITE_BACK4APP_APP_ID="qQ6TZ798MjM11jJMFYSnt7RMC1VbnMHxPGUNrmwf"
+VITE_BACK4APP_JS_KEY="oL0olj3lhssScAG4au1zbaG7BeE60nNSOyLpLYtV"
